Fix video overflowing

--- a/styles/page.css
+++ b/styles/page.css
@@ -147,7 +147,7 @@
     }
   }
 
-  img {
+  img, video {
     display: block;
     border-radius: 12px;
     max-width: 100%;
